--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.kubernetes.name=config-server-service
+quarkus.kubernetes.name=config-server
 quarkus.kubernetes.version=1.0.0
 quarkus.kubernetes.labels.app=config-server
 quarkus.kubernetes.labels.service=config-server-service
@@ -12,3 +12,6 @@ quarkus.container-image.tag=1.0.0
 quarkus.mongodb.database=config-server
 # 'host.docker.internal' means 'localhost' for Docker Desktop for Mac
 quarkus.mongodb.connection-string=mongodb://host.docker.internal:27017
+%dev.quarkus.mongodb.connection-string=mongodb://localhost:27017
+
+%dev.quarkus.http.port=8081
